<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <!-- Back Button -->
    <Button
        android:id="@+id/button_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_marginBottom="20dp" />

        <!-- Name EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Surname EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register Button -->
        <Button
            android:id="@+id/button_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="18sp"/>

    </LinearLayout>

</RelativeLayout>
